# Capstone_Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: compute_3d_points.h
include/CImg-2.9.1_pre042420/: README.txt
include/CImg-2.9.1_pre042420/examples/: CImg_demo.cpp  CMakeLists.txt  odykill.cpp  tetris.cpp  use_tinymatwriter.cpp
src/: compute_3d_points.cpp  main.cc
